# GigCore-Backend

./: .gitignore  README.md  check_redis.py  clean_db.py  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 5af9659186a9_initial_tables_user_and_job.py
app/: index.html  main.py
app/api/: __init__.py  deps.py  jobs.py  users.py
app/api/routers/: auth.py  jobs.py  users.py
app/core/: __init__.py  config.py  security.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  job.py  user.py
app/schemas/: __init__.py  job.py  user.py
app/services/: job_service.py  user_service.py
tests/: conftest.py  test_api.py  test_auth.py
